--- a/responsive2000.css
+++ b/responsive2000.css
@@ -470,6 +470,18 @@ outline: 2px solid rgb(147, 13, 64) !important;
   box-shadow: black 50%;
 }
 
+#myImg17 {
+  border-radius: 1px;
+  cursor: pointer;
+  transition: 0.3s;
+  width: 250px;
+  height:auto;
+}
+
+#myImg17:hover {opacity: 0.7;
+  box-shadow: black 50%;
+}	
+	
  /* -----IMAGE ( USE SVG 4 MAX QUALITY)------ */
 .modal {
   display: flex; 
