--- a/responsive_mobile800.css
+++ b/responsive_mobile800.css
@@ -427,6 +427,21 @@ font-size: 1rem;
   #myImg16:hover {opacity: 0.7;
     box-shadow: black 50%;
   }
+ 
+   #myImg17 {
+    border-radius: 1px;
+    cursor: pointer;
+    transition: 0.3s;
+    width: 100px;
+    height:auto;
+    padding-bottom: 50px;
+  }
+  
+  #myImg17:hover {opacity: 0.7;
+    box-shadow: black 50%;
+  }
+ 
+ 
 
   /* -----IMAGE ( USE SVG 4 MAX QUALITY)------ */
   .modal {
