--- a/responsive2000.css
+++ b/responsive2000.css
@@ -279,7 +279,7 @@
    border-radius: 1px;
    cursor: pointer;
    transition: 0.3s;
-   width: 80%;
+   width: 200px;
    height:auto;
  }
  
@@ -291,7 +291,7 @@
    border-radius: 1px;
    cursor: pointer;
    transition: 0.3s;
-   width: 80%;
+   width: 200px;
    height:auto;
  }
  
@@ -303,7 +303,7 @@
    border-radius: 1px;
    cursor: pointer;
    transition: 0.3s;
-   width: 80%;
+   width: 200px;
    height:auto;
  }
  
@@ -315,7 +315,7 @@
    border-radius: 1px;
    cursor: pointer;
    transition: 0.3s;
-   width: 80%;
+   width: 200px;
    height:auto;
  }
  
@@ -327,7 +327,7 @@
    border-radius: 1px;
    cursor: pointer;
    transition: 0.3s;
-   width: 80%;
+   width: 200px;
     height:auto;
  }
  
@@ -339,7 +339,7 @@
    border-radius: 1px;
    cursor: pointer;
    transition: 0.3s;
-   width: 80%;
+   width: 200px;
    height:auto;
  }
  
@@ -351,7 +351,7 @@
    border-radius: 1px;
    cursor: pointer;
    transition: 0.3s;
-   width: 80%;
+   width: 200px;
    height:auto;
  }
  
@@ -363,7 +363,7 @@
    border-radius: 1px;
    cursor: pointer;
    transition: 0.3s;
-   width: 80%;
+   width: 200px;
    height:auto;
  }
  
@@ -375,7 +375,7 @@
    border-radius: 1px;
    cursor: pointer;
    transition: 0.3s;
-   width: 80%;
+   width: 200px;
    height:auto;
  }
  
@@ -387,7 +387,7 @@
    border-radius: 1px;
    cursor: pointer;
    transition: 0.3s;
-   width: 80%;
+   width: 200px;
    height:auto;
  }
  
@@ -399,7 +399,7 @@
    border-radius: 1px;
    cursor: pointer;
    transition: 0.3s;
-   width: 80%;
+   width: 200px;
    height:auto;
  }
  
@@ -411,7 +411,7 @@
    border-radius: 1px;
    cursor: pointer;
    transition: 0.3s;
-   width: 80%;
+   width: 200px;
    height:auto;
  }
  
@@ -423,7 +423,7 @@
    border-radius: 1px;
    cursor: pointer;
    transition: 0.3s;
-   width: 80%;
+   width: 200px;
    height:auto;
  }
  
@@ -435,7 +435,7 @@
    border-radius: 1px;
    cursor: pointer;
    transition: 0.3s;
-   width: 80%;
+   width: 200px;
    height:auto;
  }
  
@@ -447,7 +447,7 @@
    border-radius: 1px;
    cursor: pointer;
    transition: 0.3s;
-   width: 80%;
+   width: 200px;
    height:auto;
  }
  
@@ -459,7 +459,7 @@
    border-radius: 1px;
    cursor: pointer;
    transition: 0.3s;
-   width: 80%;
+   width: 200px;
    height:auto;
  }
  
@@ -471,7 +471,7 @@
    border-radius: 1px;
    cursor: pointer;
    transition: 0.3s;
-   width: 80%;
+   width: 200px;
    height:auto;
  }
  
@@ -484,7 +484,7 @@
    border-radius: 1px;
    cursor: pointer;
    transition: 0.3s;
-   width: 80%;
+   width: 200px;
    height:auto;
  }
  
@@ -496,7 +496,7 @@
    border-radius: 1px;
    cursor: pointer;
    transition: 0.3s;
-   width: 80%;
+   width: 200px;
    height:auto;
  }
  
@@ -508,7 +508,7 @@
    border-radius: 1px;
    cursor: pointer;
    transition: 0.3s;
-   width: 80%;
+   width: 200px;
    height:auto;
  }
  
