--- a/responsive2000.css
+++ b/responsive2000.css
@@ -843,7 +843,7 @@
  .col-2 {width: 100%;
   float: center;
  }
- .col-3 {width: 25%;
+ .col-3 {width: 20%;
    float: center;
  }
  
@@ -854,7 +854,7 @@
  .col-5 {width: 41.66%;
  
  }
- .col-6 {width: 50%;
+ .col-6 {width: 40%;
    float: center;
  
  }
@@ -867,8 +867,8 @@
  .col-9 {width: 25%;
   
  }
- .col-10 {width: 25%;
- 
+ .col-10 {width: 20%;
+  float: center;
  }
  .col-11 {width: 100%;
  
