--- a/responsive2000.css
+++ b/responsive2000.css
@@ -896,6 +896,16 @@
  }
  
  /*-------------------------------------------------------------------top pictures-----------------------------------------------*/
+
+ #coverpbi { background-image: url(img/coverpbi.jpg);
+   background-color: white;
+   background-size: 100% 100%;
+   height:150px;
+ display: flex;
+ object-fit: cover;
+ -webkit-box-reflect: below 0px linear-gradient(to bottom, rgba(0,0,0,0.0), rgba(0,0,0,0.4));
+ }
+
  
  #cover1 { background-image: url(img/cover1.png);
    background-color: white;
